app/assets/stylesheets/infos.css.scss
@import "home/slider";

#career-section,
#contact-section,
#about-section,
#we-see-section {
  height: 100vh;
  min-height: 600px;
  text-align: center;
  padding-top: 180px;
  padding-bottom: 100px;

  h1,
  p {
    width: 100%;
    max-width: 700px;
    padding: 0 20px;
    margin: 0 auto 20px;
  }

  p {
    font-size: 18px;
    font-weight: 300;
  }
}

#career-section {
  background: image-url("infos/career.jpg") center bottom no-repeat;
  background-size: 100% auto;

  h1 {
    color: $text-gold;
  }

  p {
    color: #868686;
  }
}

#contact-section {
  background: $dark-gold;
  background: image-url("infos/contact-background.jpg") no-repeat center center $dark-gold;
  background-size: cover;

  h1 {
    color: $text-gold;
  }

  p {
    color: #FFF;
  }

  .form-holder {
    width: 100%;
    max-width: 600px;
    padding: 0 20px;
    margin: 0 auto;

    .form-control {
      border-color: rgba(255,255,255,0.6);
      border-radius: 0;
      background: rgba(0,0,0,0.1);
      outline: none;
      margin-bottom: 15px;
      color: #FFF;

      @include placeholder {
        color: rgba(255,255,255,0.4);
      }

      &:focus {
        background: rgba(0,0,0,0.7);
        color: #FFF;
        border-color: #FFF;

        @include placeholder {
          color: #CCC;
        }
      }
    }

    textarea {
      height: 200px;
    }
  }
}

#about-banner {
  width: 100%;
  height: 300px;
  position: relative;
  margin-top: 120px;

  &:before {
    content: "";
    z-index: 1;
    @include position(absolute, 0 0 0 0);
    @include radial-gradient(rgba(0,0,0,0.05), rgba(0,0,0,0.4));
  }

  h1 {
    color: #FFF;
    z-index: 3;
    margin: 0;
    text-align: center;
    font-size: 42px;
    padding: 0 20px;
    text-shadow: #000 1px 1px 15px;
  }

  .green-building {
    @include position(absolute, null null 0 100px);
    height: 300px;
    z-index: 2;
  }

  .logo-circle {
    @include position(absolute, null null -50px 50%);
    background: #FFF;
    width: 100px;
    margin-left: -50px;
    height: 100px;
    padding: 20px;
    border-radius: 50%;
    text-align: center;
    z-index: 3;

    img {
      height: 100%;
    }
  }
}

#about-section {
  background: #FFF;
  padding-top: 60px;
  height: auto;

  .container {
    max-width: 658px;
    text-align: left;
  }

  h3 {
    color: $text-gold;
    margin-bottom: 30px;
    line-height: 1.4em;

    small {
      font-size: 15px;
      font-style: italic;
      color: #999;
    }
  }

  p {
    color: #576366;
    font-size: 17px;
    line-height: 1.6em;
    padding: 0;
    margin: 0 0 20px;
  }
}

#tribute-section {
  height: 100vh;
  min-height: 600px;
  padding-top: 120px;
  background: image-url("infos/bg-memorial.jpg") center center no-repeat;
  background-size: cover;

  #tribute-slider {
    height: 100%;

    .carousel-inner {
      height: 100%;

      .item {
        height: 100%;
        color: #8B6508;

        .container-lg {
          text-align: center;

          .img-holder {
            padding: 50px 0 20px;

            img {
              width: 56%;
            }
          }
        }

        .full-holder {
          width: 100%;
          height: 100%;
          background-size: cover;
        }

        .carousel-caption {
          @include position(absolute, null 0 0 0);
          background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
          color: #FFF;
          text-align: left;
          padding-bottom: 15px;
          padding-top: 100px;

          p {
            font-size: 18px;
            line-height: 1.4em;
          }
        }

        .container {
          height: 100%;
          position: relative;

          h1 {
            padding: 0 30px;
            margin: 0 auto;
            max-width: 800px;
            line-height: 1.4em;
          }

          h3 {
            margin-bottom: 20px;
            line-height: 1.4em;
          }

          p {
            font-size: 18px;
            line-height: 1.4em;
            opacity: 0.8;
          }
        }
      }

      .col-sm-7, .row {
        height: 100%;
      }

      .col-sm-5 {
        @include vertical-align;
        padding-left: 40px;
      }

      .img-holder {
        height: 100%;
        position: relative;
        text-align: center;

        img {
          width: 90%;
          box-shadow: 1px 1px 20px 0 rgba(0,0,0,0.2);
        }

        &.portrait {

          img {
            width: 60%;
          }
        }
      }
    }

    .carousel-control {
      background: none;

      img {
        @include position(absolute, 50% null null null);
        margin-top: -22px;
      }

      &.left img {
        left: 20px;
      }

      &.right img {
        right: 20px;
      }
    }
  }
}

#why-choose-section {
  background: lighten(#EFEFEF, 4%);
  padding: 100px 0;

  h2 {
    color: $text-gold;
    margin-bottom: 40px;
  }
}

#we-see-section {

  h1 {
    color: $text-gold;
  }

  p {
    color: #FFF;
    font-size: 21px;
    font-weight: 300;
    line-height: 1.8em;
    text-shadow: #000 1px 1px 10px;
  }
}

